# localhub

./: '  .dockerignore  .editorconfig  .eslintrc.js  .eslintrc.json  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  :w  Dockerfile  Dockerfile.deploy  Dockerfile.heroku  Dockerfile.local  Dockerfile.webpack  LICENSE  Procfile  README.md  ]  assets.dockerfile  conftest.py  deploy.dockerfile  deploy.sh  deploy.yml  django.dockerfile  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml  docker-manage  docker-runtests  heroku.dockerfile  heroku.yml  local.dockerfile  local.yml  manage  manage.py  mypy.ini  package-lock.json  package.json  postcss.config.js  (+12 more)
bfg/: __init__.py  asgi.py  celery_app.py  conftest.py  settings.py  urls.py  wsgi.py
communikit/: celery.py  conftest.py  settings.py  types.py  urls.py  views.py  wsgi.py
docker/: entrypoint  start-celeryworker  start-flower
frontend/: .eslintrc.js  Dockerfile  README.md  package.json  tailwind.config.js  tslint.json  vue.config.js
localhub/: __init__.py  asgi.py  celery.py  celery_app.py  conftest.py  routing.py  settings.py  storages.py  urls.py  wsgi.py
localite/: celery.py  conftest.py  settings.py  urls.py  wsgi.py
mockups/: form.html  index.html  modal.html
requirements/: aws.txt  base.in  base.txt  deploy.in  deploy.txt  heroku.in  heroku.txt  local.in  local.txt  production.txt  requirements.deploy.in  requirements.deploy.txt  requirements.heroku.in  requirements.heroku.txt  requirements.local.in  requirements.local.txt  test.in  test.txt  testing.txt
(+3075 files in other folders)
