[tool.poetry]
name = "social_bfg"
version = "0.1.0"
description = ""
authors = ["Dan Jacob <danjac2018@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"
pillow = "^7.1.2"
beautifulsoup4 = "^4.9.1"
bleach = "^3.1.5"
boto3 = "^1.13.11"
celery = "^4.4.2"
dj-database-url = "^0.5.0"
django-allauth = "^0.41.0"
django-celery-email = "^3.0.0"
django-configurations = "^2.2"
django-countries = "^6.1.2"
django-extensions = "^2.2.9"
django-markdownx = "^3.0.1"
django-model-utils = "^4.0.0"
django-redis = "^4.11.0"
django-storages = "^1.9.1"
django-taggit = "^1.2.0"
django-timezone-field = "^4.0"
django-widget-tweaks = "^1.4.8"
django-anymail = {extras = ["mailgun"], version = "^7.1.0"}
geopy = "^1.22.0"
gunicorn = "^20.0.4"
icalendar = "^4.0.6"
ipython = "^7.14.0"
micawber = "^0.5.1"
psycopg2-binary = "^2.8.5"
pymdown-extensions = "^7.1"
pyopenssl = "^19.1.0"
pytz = "^2020.1"
pywebpush = "^1.11.0"
redis = "^3.5.2"
rules = "^2.2"
sorl-thumbnail = "^12.6.3"
unidecode = "^1.1.1"
werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
django-debug-toolbar = "^2.2"
pytest-cov = "^2.8.1"
pytest-django = "^3.9.0"
pytest-mock = "^3.1.0"
pytest-xdist = "^1.32.0"
factory-boy = "^2.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
